--- a/pages/editor.css
+++ b/pages/editor.css
@@ -16,12 +16,14 @@ body {
   background-repeat: no-repeat;
   font-family: 'Open Sans', sans-serif;
   /* Definir uma fonte padrão */
-  zoom: 1.15; /* Aumenta o zoom em 20% */
+  zoom: 1.15;
+  /* Aumenta o zoom em 20% */
 }
 
 @media (max-width: 768px) {
   /* Estilos para telas menores, como smartphones */
 }
+
 @media (min-width: 769px) {
   /* Estilos para telas maiores, como tablets e desktops */
 }
@@ -43,36 +45,12 @@ p {
   align-items: center;
   justify-content: space-between;
   /* background-color: #030060; */
-  }
+}
 
-  .voltar, .conectado, .inicio, .editar {
-    position: absolute;
-    top: 0;
-    padding: 0.8rem;
-    margin: 5px;
-    background-color: #030060;
-    color: #fff;
-    border: none;
-    border-radius: 0.8rem;
-    cursor: pointer;
-    transition: 0.5s ease-out;
-    overflow: visible;
-  }
-
-  .voltar a, .conectado a, .inicio a, .editar a {
-    color: #fff;
-    text-decoration: none;
-  }
-
-  .voltar:hover, .conectado:hover, .inicio:hover, .editar:hover {
-    background-color: #1b40af; /* Cor do fundo ao passar o mouse */
-  }
-
-  .voltar {
-    left: 0;
-  }
-
-.novo_usuario, .conectado, .inicio {
+.voltar,
+.conectado,
+.inicio,
+.editar {
   position: absolute;
   top: 0;
   padding: 0.8rem;
@@ -86,13 +64,54 @@ p {
   overflow: visible;
 }
 
-.novo_usuario a, .conectado a, .inicio a {
+.voltar a,
+.conectado a,
+.inicio a,
+.editar a {
   color: #fff;
   text-decoration: none;
 }
 
-.novo_usuario:hover, .conectado:hover, .inicio:hover {
-  background-color: #1b40af; /* Cor do fundo ao passar o mouse */
+.voltar:hover,
+.conectado:hover,
+.inicio:hover,
+.editar:hover {
+  background-color: #1b40af;
+  /* Cor do fundo ao passar o mouse */
+}
+
+.voltar {
+  left: 0;
+}
+
+.novo_usuario,
+.conectado,
+.inicio {
+  position: absolute;
+  top: 0;
+  padding: 0.8rem;
+  margin: 5px;
+  background-color: #030060;
+  color: #fff;
+  border: none;
+  border-radius: 0.8rem;
+  cursor: pointer;
+  transition: 0.5s ease-out;
+  overflow: visible;
+}
+
+.novo_usuario a,
+.conectado a,
+.inicio a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.novo_usuario:hover,
+.conectado:hover,
+.inicio:hover {
+  background-color: #1b40af;
+  /* Cor do fundo ao passar o mouse */
 }
 
 .novo_usuario {
@@ -100,33 +119,33 @@ p {
 }
 
 .conectado {
-    right: 0;
+  right: 0;
 }
 
 .inicio {
-    left: 50%;
-    transform: translateX(-50%);
+  left: 50%;
+  transform: translateX(-50%);
 }
 
-input{
+input {
   display: block;
-    width: 100%;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: var(--bs-body-color);
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    background-color: var(--bs-body-bg);
-    background-clip: padding-box;
-    border: var(--bs-border-width) solid var(--bs-border-color);
-    border-radius: var(--bs-border-radius);
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  width: 100%;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: var(--bs-body-color);
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: var(--bs-body-bg);
+  background-clip: padding-box;
+  border: var(--bs-border-width) solid var(--bs-border-color);
+  border-radius: var(--bs-border-radius);
+  transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
-  
+
 .form-caixa {
-  background-color: #fff;
+  background-color: #333333;
   width: 85%;
   margin: 0 auto;
   border-radius: 10px;
@@ -145,82 +164,96 @@ input{
 
 /*titulo "Login"*/
 .titulo {
-    text-align: center;
-    font-size: 2rem;
-    line-height: 2rem;
-    font-weight: 600;
-    color: black;
-    font-family: 'Poppins', sans-serif;
-    color:#030060;
-    margin-top: 5rem;
-    margin-bottom: 3rem;
-  }
-
-  .perfil {
-    color: #030060;
-    font-size: 1.2rem;
-    display: flex; /* Use display flex para centralizar o conteúdo verticalmente */
-    flex-direction: column; /* Para alinhar os elementos verticalmente */
-    text-align: center; /* Alinhe o texto horizontalmente ao centro */
-    margin: 0 auto;
-    width: 60%;
-    align-items: center;
+  text-align: center;
+  font-size: 2rem;
+  line-height: 2rem;
+  font-weight: 600;
+  color: black;
+  font-family: 'Poppins', sans-serif;
+  color: #030060;
+  margin-top: 5rem;
+  margin-bottom: 3rem;
 }
 
-  .perfil p{
-    width: 100%;
-  }
+.perfil {
+  color: #030060;
+  font-size: 1.2rem;
+  display: flex;
+  /* Use display flex para centralizar o conteúdo verticalmente */
+  flex-direction: column;
+  /* Para alinhar os elementos verticalmente */
+  text-align: center;
+  /* Alinhe o texto horizontalmente ao centro */
+  margin: 0 auto;
+  width: 60%;
+  align-items: center;
+}
 
-  #info{
-    font-weight: normal;
-  }
+.perfil p {
+  width: 100%;
+}
 
-  #nome{
-    color: #030060;
-    font-size: 1.2rem;
-    font-weight: bold;
-    display: inline-block;
-  }
+#info {
+  font-weight: normal;
+}
 
-  .texto{
-    color: #030060;
-    font-size: 1.2rem;
-    font-weight: bold;
-    font-weight: bold;
-  }
+#nome {
+  color: #030060;
+  font-size: 1.2rem;
+  font-weight: bold;
+  display: inline-block;
+}
 
-  .text-table-style{
-    color: #030060;
-    font-size: 1.2rem;
-    font-weight: bold;
-    font-weight: bold;
-  }
+.texto {
+  color: white;
+  font-size: 1.2rem;
+}
 
-  #botao-editar{
-    display: flex;
-    margin: auto;
-    font-weight: bold;
-    color: #030060;
-    padding: 2%;
-    align-items: center;
-    width: 80%;
-    justify-content: center;
-  }
-  .botao{
-    padding: 1.2rem;
-    background-color: #030060;
-    color: #fff;
-    border: none;
-    border-radius: 0.8rem;
-    cursor: pointer;
-    transition: 0.5s ease-out;
-    overflow: visible;
-  }
-  
-  .botao{
-    font-size: large;
-  }
-  
-  .botao:hover{
-    background-color: #1b40af; /* Cor do fundo ao passar o mouse */
-  }
+.text-table-style {
+  color: #030060;
+  font-size: 1.2rem;
+  font-weight: bold;
+  font-weight: bold;
+}
+
+#botao-editar {
+  display: flex;
+  margin: auto;
+  font-weight: bold;
+  color: #030060;
+  padding: 2%;
+  align-items: center;
+  width: 60%;
+  justify-content: center;
+}
+
+.botao {
+  padding: 1.2rem;
+  background-color: #333333;
+  color: #fff;
+  border: none;
+  border-radius: 0.8rem;
+  cursor: pointer;
+  transition: 0.5s ease-out;
+  overflow: visible;
+}
+
+.botao {
+  font-size: large;
+}
+
+.botao:hover {
+  background-color: #929292;
+  /* Cor do fundo ao passar o mouse */
+}
+
+#nav {
+  background-color: #333333;
+  color: white;
+}
+
+.navbar-brand {
+  display: flex;
+  margin: 0px;
+}
+
