--- a/pages/editor.css
+++ b/pages/editor.css
@@ -199,19 +199,19 @@ input {
 
 #nome {
   color: #030060;
-  font-size: 1.2rem;
+  /* font-size: 1.2rem; */
   font-weight: bold;
   display: inline-block;
 }
 
 .texto {
   color: white;
-  font-size: 1.2rem;
+  /* font-size: 1.2rem; */
 }
 
 .text-table-style {
   color: #030060;
-  font-size: 1.2rem;
+  /* font-size: 1.2rem; */
   font-weight: bold;
   font-weight: bold;
 }
