--- a/pages/perfil.css
+++ b/pages/perfil.css
@@ -2,76 +2,30 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* Adicionado para melhorar o cálculo do tamanho */
 }
 
 body {
-  background-color: #c1c1c1;
-  height: 100vh;
-  font-family: 'Inter', sans-serif;
-  color: white;
-}
-
-#nav, .card {
-  background-color: #333333;
-}
-
-.navbar-brand {
-  display: flex;
-  margin: 0px;
-}
-
-.nav-link{
-  cursor: pointer;
-}
-
-.form-control:disabled {
-  border-radius: 0;
-  background: transparent;
-  border: none;
-}
-
-.form-control:disabled::placeholder,
-.form-label{
-  color: white;
-}
-
-
-
-
-
-
-
-/* @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box; */
-  /* Adicionado para melhorar o cálculo do tamanho */
-/* } */
-
-/* body { */
-  /* width: 100%;
+  width: 100%;
   min-height: 100vh;
-  background-color: #E5E6E7; */
+  background-color: #c1c1c1;
   /* background-image: linear-gradient(to bottom, #001024, #001e44); */
-  /* background-repeat: no-repeat;
-  font-family: 'Open Sans', sans-serif; */
+  background-repeat: no-repeat;
+  font-family: 'Open Sans', sans-serif;
   /* Definir uma fonte padrão */
-  /* zoom: 1.15; */
+  zoom: 1.15;
   /* Aumenta o zoom em 20% */
-/* } */
+}
 
-/* @media (max-width: 768px) { */
+@media (max-width: 768px) {
   /* Estilos para telas menores, como smartphones */
-/* } */
+}
 
-/* @media (min-width: 768px) { */
+@media (min-width: 768px) {
   /* Estilos para telas maiores, como tablets e desktops */
-/* } */
+}
 
-/* 
+
 p {
   font-size: 1em;
 }
@@ -88,9 +42,9 @@ p {
   align-items: center;
   justify-content: space-between;
   /* background-color: #030060; */
-/* } */
+}
 
-/* .relatorios,
+.relatorios,
 .conectado,
 .inicio {
   top: 0;
@@ -110,16 +64,16 @@ p {
 .inicio a {
   color: #fff;
   text-decoration: none;
-} */
+}
 
-/* .relatorios:hover,
+.relatorios:hover,
 .conectado:hover,
 .inicio:hover {
-  background-color: #1b40af; 
+  background-color: #1b40af;
   /* Cor do fundo ao passar o mouse */
-/* } */
+}
 
-/* .relatorios {
+.relatorios {
   left: 0;
 }
 
@@ -130,10 +84,10 @@ p {
 .inicio {
   left: 50%;
   transform: translateX(-50%);
-} */
+}
 
 
-/* .inicioPerfil {
+.inicioPerfil {
   display: flex;
   position: relative;
   justify-content: center;
@@ -154,14 +108,14 @@ p {
   position: relative;
   color: #fff;
   text-decoration: none;
-justify-content: center;} */
+justify-content: center;}
 
-/* .inicioPerfil:hover {
-  background-color: #1b40af; 
-  Cor do fundo ao passar o mouse
-} */
+.inicioPerfil:hover {
+  background-color: #1b40af;
+  /* Cor do fundo ao passar o mouse */
+}
 
-/* button {
+button {
   display: flex;
   position: relative;
   justify-content: center;
@@ -176,19 +130,19 @@ justify-content: center;} */
   cursor: pointer;
   transition: 0.5s ease-out;
   overflow: visible;
-} */
+}
 
-/* button a {
+button a {
   color: #fff;
   text-decoration: none;
-} */
+}
 
-/* button:hover {
-  background-color: #1b40af; */
+button:hover {
+  background-color: #1b40af;
   /* Cor do fundo ao passar o mouse */
-/* } */
+}
 
-/* .infos{
+.infos{
   display: grid;
   width: 100%;
   grid-template-rows: 1fr 1fr 1fr 1fr;
@@ -200,18 +154,18 @@ justify-content: center;} */
   margin-top: 1rem;
   display: flex;
   justify-content: center;
-} */
+}
 
-/* .container-login {
+.container-login {
   margin-top: 12%;
 }
 
 
 table {
   gap: 0.5rem;
-} */
+}
 
-/* a {
+a {
   text-decoration: none;
   color: #fff;
 }
@@ -224,9 +178,9 @@ table {
   border-radius: 10px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
   padding: 1rem;
-} */
+}
 
-/* #botaoEditar {
+#botaoEditar {
   display: flex;
   position: relative;
   justify-content: center;
@@ -251,12 +205,12 @@ table {
   text-decoration: none;
 justify-content: center;}
 
- #botaoEditar:hover {
+#botaoEditar:hover {
   background-color: #1b40af;
-  Cor do fundo ao passar o mouse
-} */
+  /* Cor do fundo ao passar o mouse */
+}
 
-/* .boxEditar{
+.boxEditar{
   display: grid;
   width: 100%;
   grid-template-columns: 1fr;
@@ -267,16 +221,16 @@ justify-content: center;}
 
 
 .form-caixa-protect {
-  background-color: #fff;
+  background-color: #333333;
   width: 70%;
   margin: 0 auto;
   margin-top: 4rem;
   border-radius: 10px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
   padding: 1rem;
-} */
+}
 
-/* .form-caixa-salvo {
+.form-caixa-salvo {
   background-color: #fff;
   width: 60%;
   margin: 0 auto;
@@ -295,11 +249,11 @@ justify-content: center;}
   border-radius: 10px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
   padding: 5%;
-} */
+}
 
 
 /*titulo "Login"*/
-/* .titulo {
+.titulo {
   text-align: center;
   font-size: 2rem;
   line-height: 2rem;
@@ -309,16 +263,16 @@ justify-content: center;}
   color: #030060;
   margin-top: 2rem;
   margin-bottom: 3rem;
-} */
+}
 
-/* .titulo-protect {
+.titulo-protect {
   text-align: center;
   font-size: 2rem;
   line-height: 2rem;
   font-weight: 600;
   color: black;
   font-family: 'Poppins', sans-serif;
-  color: #030060;
+  color: white;
   margin-top: 1rem;
   margin-bottom: 3rem;
 }
@@ -332,22 +286,22 @@ justify-content: center;}
   font-family: 'Poppins', sans-serif;
   color: #030060;
   margin-top: 1rem;
-} */
+}
 
-/* .titulo-login {
+.titulo-login {
   text-align: center;
   font-size: 2rem;
   line-height: 2rem;
   font-weight: 600;
   color: black;
   font-family: 'Poppins', sans-serif;
-  color: #030060; */
-  /* margin-top: 5rem; */
-  /* margin-bottom: 3rem;
-} */
-
-/* .perfil {
   color: #030060;
+  /* margin-top: 5rem; */
+  margin-bottom: 3rem;
+}
+
+.perfil {
+  color: white;
   font-size: 1.2rem;
   display: flex;
   flex-direction: column;
@@ -359,20 +313,20 @@ justify-content: center;}
 
 .perfil p {
   width: 100%;
-} */
+}
 
-/* .perfil-login {
+.perfil-login {
   color: #030060;
   font-size: 1.2rem;
   display: flex;
-  Use display flex para centralizar o conteúdo verticalmente  */
-  /* flex-direction: column; */
+  /* Use display flex para centralizar o conteúdo verticalmente */
+  flex-direction: column;
   /* Para alinhar os elementos verticalmente */
-  /* text-align: center; */
+  text-align: center;
   /* Alinhe o texto horizontalmente ao centro */
-  /* margin: 0 auto; */
+  margin: 0 auto;
   /* width: 60%; */
-  /* align-items: center;
+  align-items: center;
 }
 
 .perfil-login p {
@@ -421,7 +375,7 @@ a {
   border: none;
   display: flex;
   padding: 1.5rem 2.5rem;
-  background-color: #030060;
+  background-color: #333333;
   color: #ffffff;
   font-size: 1.1rem;
   line-height: 1rem;
@@ -433,14 +387,13 @@ a {
   border-radius: 0.5rem;
   user-select: none;
   gap: 0.75rem;
-  box-shadow: 0 4px 6px -1px #5b58ff, 0 2px 4px -1px #5b58ff;
   transition: all .6s ease;
   margin: auto;
   margin-top: 1rem;
 }
 
 .irUsuarios:hover {
-  box-shadow: 0 10px 15px -3px #5b58ff, 0 4px 6px -2px #5b58ff;
+  background-color: #8f8f8f;
 }
 
 .irUsuarios:focus,
