--- a/pages/editor.css
+++ b/pages/editor.css
@@ -11,7 +11,7 @@
 body {
   width: 100%;
   min-height: 100vh;
-  background-color: #E5E6E7;
+  background-color: #c1c1c1;
   /* background-image: linear-gradient(to bottom, #001024, #001e44); */
   background-repeat: no-repeat;
   font-family: 'Open Sans', sans-serif;
