--- a/pages/usuarios.css
+++ b/pages/usuarios.css
@@ -10,7 +10,7 @@
 body {
   width: 100%;
   min-height: 100vh;
-  background-color: #E5E6E7;
+  background-color: #c1c1c1;
   background-repeat: no-repeat;
   font-family: 'Open Sans', sans-serif;
   zoom: 1.15;
