--- a/pages/ficha.css
+++ b/pages/ficha.css
@@ -78,3 +78,132 @@ body {
     align-items: center;
     width: 90%;
 }
+
+.base {
+    width: 100vw;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.casa {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    height: 100vh;
+    width: 100%;
+    margin-bottom: 2%;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    width: 43%;
+    height: 100vh;
+    box-sizing: border-box;
+    padding: 12px;
+    justify-content: space-between;
+    /* margin-bottom: 20px;
+    height: 100%; */
+}
+
+.block {
+    background-color: #333333;
+    /* margin-bottom: 14px; */
+    height: 8%;
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+}
+
+.descrition {
+    display: flex;
+    /* width: 20%; */
+    /* height: 65%; */
+    align-items: center;
+    justify-content: space-between;
+}
+
+.esptext {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-ultimo {
+    display: flex;
+    background-color: #333333;
+    width: 90%;
+    height: 98%;
+    border-radius: 10px;
+}
+
+.text-area {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+}
+
+.form-floating {
+    margin-top: 9px;
+}
+
+.sinais {
+    background-color: #333333;
+    width: 85%;
+    height: 75%;
+    padding: 22px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    border-radius: 18px;
+    box-shadow: 0px 0px 15px #1E90FF;
+}
+
+#pulso {
+    width: 28%;
+}
+
+#pressao {
+    width: 32%;
+}
+
+#satura {
+    width: 31%;
+}
+
+.perfusao {
+    width: 47%;
+    background-color: #333333;
+    box-shadow: 0px 0px 15px #1E90FF;
+    border-radius: 18px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.normal_anormal {
+    width: 31%;
+    background-color: #333333;
+    box-shadow: 0px 0px 15px #1E90FF;
+    border-radius: 18px;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.linha5 {
+    display: flex;
+    height: 7%;
+    justify-content: space-around;
+}
+
+.form-check {
+    display: flex;
+    align-items: center;
+}
+
+.checks {
+    display: flex;
+}
